<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyle"
            android:text="@string/text_local_ip">
        </TextView>

        <TextView
            android:id="@+id/tv_ip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center_vertical">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyle"
            android:text="@string/text_receiver_ip">
        </TextView>

        <EditText
            android:id="@+id/et_ip"
            style="@style/EditTextStyle"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:maxLength="15">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height"
        android:orientation="horizontal">
        <TextView
            style="@style/TextStyle"
            android:text="@string/text_receiver_port">
        </TextView>

        <EditText
            android:id="@+id/et_sender_port"
            style="@style/EditTextStyle"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="10">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height"
        android:orientation="horizontal">
        <TextView
            style="@style/TextStyle"
            android:text="@string/text_sender_port">
        </TextView>

        <EditText
            android:id="@+id/et_receiver_port"
            style="@style/EditTextStyle"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="10">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_config"
            style="@style/ButtonStyle"
            android:text="@string/text_set">
        </Button>

        <Button
            android:id="@+id/btn_call"
            style="@style/ButtonStyle"
            android:text="@string/text_call">
        </Button>

        <Button
            android:id="@+id/btn_hungup"
            style="@style/ButtonStyle"
            android:text="@string/text_hungup">
        </Button>

    </LinearLayout>

</LinearLayout>